fix register consul and healthcheck service
